Implement repeated guess feature

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -7,3 +7,17 @@
 
 // Bootstrap
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+
+body {
+  padding: 10px;
+  margin: 10px;
+}
+
+h4 {
+  .hide {
+    display: none;
+  }
+  .show {
+    color: red;
+  }
+}
